--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,6 @@ requires-python = ">=3.12"
 dependencies = [
     "transformers>=4.46.0",
     "datasets>=3.1.0",
-    "albumentations>=1.4.0",
     "timm>=1.0.0",
     "tensorboard>=2.18.0",
     "pyyaml>=6.0",
@@ -19,6 +18,8 @@ dependencies = [
     "pydantic>=2.0.0",
     "accelerate>=0.26.0",
     "matplotlib>=3.9.0",
+    "albumentationsx>=2.0.13",
+    "torchmetrics>=1.8.2",
 ]
 
 [project.optional-dependencies]
@@ -34,7 +35,7 @@ cu128 = [
 ]
 
 [project.scripts]
-preprocess-data = "doc_obj_detect.data:preprocess_cli"
+preprocess-data = "doc_obj_detect.cli:preprocess_cli"
 train = "doc_obj_detect.train:main"
 distill = "doc_obj_detect.distill:main"
 evaluate = "doc_obj_detect.evaluate:main"
