--- a/configs/distill.yaml
+++ b/configs/distill.yaml
@@ -1,14 +1,39 @@
 # Knowledge distillation configuration
 
 teacher:
-  checkpoint: "outputs/finetune_doclaynet/checkpoints/best_model.pth"
-  backbone: "timm/vit_pe_spatial_base_patch16_512.fb"
-  detector: "deformable-detr"
+  checkpoint: "outputs/finetune_doclaynet/final_model"
+  backbone: "convnext_large.dinov3_lvd1689m"
+  detector: "dfine"
 
-student:
-  backbone: "timm/convnextv2_base.fcmae"  # Smaller ConvNeXtV2 backbone
-  detector: "rt-detr"  # Real-time DETR for faster inference
-  num_classes: 11  # DocLayNet classes
+model:
+  backbone: "convnext_base.dinov2"  # student backbone variant
+  num_classes: 11
+  use_pretrained_backbone: true
+  freeze_backbone: false
+
+dfine:
+  encoder_in_channels: [192, 384, 768]
+  feat_strides: [8, 16, 32]
+  num_feature_levels: 3
+  backbone_kwargs:
+    out_indices: [1, 2, 3]
+  encoder_hidden_dim: 256
+  encoder_layers: 1
+  encoder_ffn_dim: 1024
+  encoder_attention_heads: 8
+  d_model: 256
+  num_queries: 300
+  decoder_layers: 6
+  decoder_ffn_dim: 1024
+  decoder_attention_heads: 8
+  decoder_n_points: 4
+  weight_loss_vfl: 1.0
+  weight_loss_bbox: 5.0
+  weight_loss_giou: 2.0
+  weight_loss_fgl: 0.15
+  weight_loss_ddf: 1.5
+  num_denoising: 100
+  auxiliary_loss: true
 
 distillation:
   loss_type: "kl"  # "kl" or "mse"
