--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "matplotlib>=3.9.0",
     "albumentationsx>=2.0.13",
     "torchmetrics>=1.8.2",
+    "rich>=14.2.0",
 ]
 
 [project.optional-dependencies]
