--- a/configs/pretrain_publaynet.yaml
+++ b/configs/pretrain_publaynet.yaml
@@ -2,7 +2,7 @@
 # ConvNeXt-Large-DINOv3 backbone + D-FINE detector head
 
 model:
-  backbone: "convnext_large.dinov3_lvd1689m"  # ConvNeXt-Large DINOv3 (198M params)
+  backbone: "convnext_base.dinov3_lvd1689m"  # ConvNeXt-Large DINOv3 (198M params)
   num_classes: 5  # PubLayNet: text, title, list, table, figure
   use_pretrained_backbone: true  # Keep ConvNeXt-DINOv3 weights (1.7B images, SOTA features)
   use_pretrained_head: false  # Train D-FINE head from scratch (4-level architecture mismatch)
@@ -13,26 +13,30 @@ dfine:
   # Backbone feature extraction (ConvNeXt stages 0, 1, 2, 3)
   # Using 4 levels for better small object detection (page numbers, footnotes, formulas)
   # D-FINE default is 3 levels {8, 16, 32}, but we use 4 {4, 8, 16, 32} for documents
-  encoder_in_channels: [192, 384, 768, 1536]  # ConvNeXt-L channel dimensions
-  decoder_in_channels: [256, 256, 256, 256]  # Decoder input channels (MUST match num_feature_levels!)
+  encoder_in_channels: [128, 256, 512, 1024]  # ConvNeXt-L channel dimensions
+  decoder_in_channels: [288, 288, 288, 288]  # Match D-FINE-X d_model: 384 (MUST match num_feature_levels!)
   feat_strides: [4, 8, 16, 32]  # Feature pyramid strides
   num_feature_levels: 4  # D-FINE standard: 3, but 4 levels needed for small objects in documents
   backbone_kwargs:
     out_indices: [0, 1, 2, 3]  # Extract from stages 0, 1, 2, 3 (C2, C3, C4, C5)
 
-  # Encoder configuration
-  encoder_hidden_dim: 256
+  # Encoder configuration (D-FINE-X settings)
+  encoder_hidden_dim: 288  # D-FINE-X uses 384 (vs 256 for L/M/S)
   encoder_layers: 1
-  encoder_ffn_dim: 1024
+  encoder_ffn_dim: 1280  # D-FINE-X uses 2048 (vs 1024 for L/M/S)
   encoder_attention_heads: 8
+  encoder_activation_function: "gelu"
 
-  # Decoder configuration
-  d_model: 256
+  # Decoder configuration (D-FINE-X settings)
+  d_model: 288  # D-FINE-X embedding dimension: 384 (vs 256 for L/M/S)
   num_queries: 300  # Number of object queries
   decoder_layers: 6
-  decoder_ffn_dim: 1024
+  decoder_ffn_dim: 1280  # D-FINE-X uses 2048 (vs 1024 for L/M/S)
   decoder_attention_heads: 8
   decoder_n_points: 4
+  decoder_activation_function: "silu"
+
+  max_num_bins: 48
 
   # D-FINE specific losses (FDR + GO-LSD)
   weight_loss_vfl: 1.0  # Varifocal loss
@@ -56,26 +60,26 @@ data:
 
 augmentation:
   # Multi-scale training for better scale invariance and small object detection
-  multi_scale_sizes: [512, 544, 576, 608, 640]
+  multi_scale_sizes: [576, 608, 640]
   max_long_side: 928
-  rotate_limit: 5
-  rotate_prob: 0.5
+  rotate_limit: 3
+  rotate_prob: 0.3
   perspective:
-    probability: 0.3
+    probability: 0.15
     scale_min: 0.02
     scale_max: 0.05
   elastic:
-    probability: 0.2
+    probability: 0.0
     alpha: 30
     sigma: 5
   brightness_contrast:
     limit: 0.2
     probability: 0.5
   blur:
-    probability: 0.3
+    probability: 0.2
     blur_limit: 3
   compression:
-    probability: 0.3
+    probability: 0.2
     quality_min: 75
     quality_max: 100
   noise:
@@ -122,8 +126,8 @@ training:
   save_strategy: "steps"
   save_total_limit: 3
   load_best_model_at_end: true
-  metric_for_best_model: "eval_loss"
-  greater_is_better: false
+  metric_for_best_model: "map"
+  greater_is_better: true
   push_to_hub: false
 
 output:
